--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,4 +14,6 @@ redis = "0.7"
 r2d2="0.7"
 r2d2_redis={ git = "https://github.com/sorccu/r2d2-redis.git" }
 
+uuid ={ version="0.3", features=["v5"] }
+
 rustc-serialize="0.3"
